# internal/dto/request.go
@@ -1,1 +1,5 @@
 package dto
+
+type CreateLampiranRequest struct {
+	FilePath string `json:"file_path" binding:"required"`
+}
